<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:src="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">
            ​

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="256dp"
                app:contentScrim="@android:color/white">
                <!--​-->
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/house1" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="" />
                ​
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:weightSum="10"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:id="@+id/layout_search"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:padding="@dimen/margin_medium">

        <ImageButton
            android:id="@+id/img_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:background="@drawable/edit_text_design"
                android:drawableStart="@drawable/ic_search_black_24dp"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/tv_nav_address"
                android:inputType="text"
                android:paddingLeft="@dimen/margin_small"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_regular"

                     />

        </LinearLayout>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mat_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="@dimen/twenty"
            android:backgroundTint="@color/colorWhite"
            src:cardCornerRadius="@dimen/twenty">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/thirty"
                    android:layout_marginTop="@dimen/fiftee"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/tv_12_0000"
                    android:textSize="@dimen/twenty"
                    android:textStyle="bold" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab3"
                    android:layout_width="@dimen/fifty"
                    android:layout_height="@dimen/fifty"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_marginEnd="@dimen/twenty"
                    android:backgroundTint="@color/lightblue"
                    android:src="@drawable/ic_near_me_white_24dp" />

                <ImageView
                    android:id="@+id/img_location"
                    android:layout_width="@dimen/twenty"
                    android:layout_height="@dimen/twenty"
                    android:layout_below="@id/tv_price"
                    android:layout_marginLeft="@dimen/twenty"
                    android:layout_marginTop="@dimen/ten"
                    android:src="@drawable/ic_location_on_black_24dp" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_price"
                    android:layout_marginStart="@dimen/ten"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_toEndOf="@id/img_location"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/tv_marylebone_london"

                    android:textColor="@color/gray"
                    android:textSize="@dimen/fiftee" />

                <ImageView
                    android:id="@+id/img_sqft"
                    android:layout_width="@dimen/twenty"
                    android:layout_height="@dimen/twenty"
                    android:layout_below="@id/img_location"
                    android:layout_marginLeft="@dimen/twenty"
                    android:layout_marginTop="@dimen/ten"
                    android:src="@drawable/ic_zoom_out_map_black_24dp" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_sqft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_location"
                    android:layout_marginStart="@dimen/ten"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_toEndOf="@id/img_sqft"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/tv_2100sqft"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/fiftee" />

                <ImageView
                    android:id="@+id/img_bed"
                    android:layout_width="@dimen/twenty"
                    android:layout_height="@dimen/twenty"
                    android:layout_below="@id/tv_location"
                    android:layout_marginStart="@dimen/seventy"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_toEndOf="@id/tv_sqft"
                    android:src="@drawable/ic_hotel_black_24dp" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_bed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_location"
                    android:layout_marginStart="@dimen/ten"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_toEndOf="@id/img_bed"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/tv_3bedroom"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/fiftee" />

                <ImageView
                    android:id="@+id/img_favorite"
                    android:layout_width="@dimen/twenty"
                    android:layout_height="@dimen/twenty"
                    android:layout_below="@id/img_bed"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginTop="@dimen/ten"
                    android:src="@drawable/ic_favorite_border_black_24dp" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_sqft"
                    android:layout_marginStart="@dimen/ten"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_toEndOf="@id/img_favorite"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/tv_favorite"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/fiftee" />

                <ImageView
                    android:id="@+id/img_review"
                    android:layout_width="@dimen/twenty"
                    android:layout_height="@dimen/twenty"
                    android:layout_below="@id/tv_bed"
                    android:layout_marginStart="@dimen/fifty"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_toEndOf="@id/tv_favorite"
                    android:src="@drawable/ic_mode_edit_black_24dp" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_bed"
                    android:layout_marginStart="@dimen/ten"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_toEndOf="@id/img_review"
                    android:fontFamily="sans-serif-medium"
                    android:text="23 reviews"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/fiftee" />

                <View
                    android:id="@+id/img_view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/tv_review"
                    android:layout_marginTop="@dimen/ten"
                    android:alpha="0.2"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="@dimen/ten"/>

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_see_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_view_line"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/tv_see_reviews" />

                <com.google.android.material.button.MaterialButton

                    android:id="@+id/m_btn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_view_line"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/twenty"
                    android:backgroundTint="@color/colorWhite"
                    android:fontFamily="sans-serif-medium"
                    android:text="See Photos"
                    android:textSize="@dimen/ten"
                    app:cornerRadius="@dimen/thirty"
                    app:rippleColor="#CFD8DC"
                    app:strokeColor="@color/gray"
                    app:strokeWidth="2dp" />


            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <org.mmtextview.components.MMTextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mat_1"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="@dimen/twenty"
            android:paddingLeft="@dimen/twenty"
            android:text="@string/tv_single_family_house"
            android:textSize="18sp"
            android:textStyle="bold" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:padding="@dimen/twenty"
            android:text="@string/detail_lbl"
            android:textSize="@dimen/twenty" />

        <org.mmtextview.components.MMButton

            android:id="@+id/m_btn_2"
            android:layout_width="@dimen/hundred5"
            android:layout_height="wrap_content"
            android:layout_below="@id/mat_1"
            android:layout_marginStart="@dimen/forty"
            android:layout_marginTop="@dimen/twohun"
            android:layout_marginEnd="@dimen/twenty"
            android:backgroundTint="@color/colorWhite"
            android:fontFamily="sans-serif-medium"
            android:text="Add Favorite"
            android:textAlignment="center"
            android:textSize="@dimen/fiftee"
            app:cornerRadius="@dimen/thirty"
            app:rippleColor="#CFD8DC"
            app:strokeColor="@color/gray"
            app:strokeWidth="2dp" />

        <org.mmtextview.components.MMButton

            android:id="@+id/m_btn_3"
            android:layout_width="@dimen/hundred"
            android:layout_height="wrap_content"
            android:layout_below="@id/mat_1"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/twohun"
            android:layout_marginEnd="@dimen/twenty"
            android:layout_toEndOf="@id/m_btn_2"
            android:backgroundTint="@color/lightblue"
            android:fontFamily="sans-serif-medium"
            android:text="Book Now"
            android:textSize="@dimen/fiftee"
            app:cornerRadius="@dimen/thirty"
            app:rippleColor="#CFD8DC"
            app:strokeColor="@color/gray"
            app:strokeWidth="2dp" />
    </RelativeLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>