<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"
        android:layout_marginRight="@dimen/margin8"
        app:cardCornerRadius="@dimen/ten"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:contentPadding="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:layout_marginRight="@dimen/margin4"
            android:layout_marginLeft="@dimen/margin4"
            android:layout_marginTop="@dimen/margin4"
            android:layout_marginBottom="@dimen/margin4">

            <ImageView
                android:id="@+id/img_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/house3"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="@dimen/nighty"
                android:layout_height="@dimen/twenty"
                android:layout_marginTop="@dimen/hundred"
                android:layout_marginLeft="@dimen/thirty"
                android:text="@string/tv_up_to_12_000"
                android:background="@drawable/rounded_corner"
                android:textAlignment="center"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:layout_marginTop="@dimen/hundred"
                android:layout_marginEnd="@dimen/twenty"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_near_me_black_24dp" />

            <androidx.cardview.widget.CardView
                android:layout_below="@id/tv_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/seventy"
                android:layout_marginTop="@dimen/ten"
                android:background="@color/themeColor">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_4"
                        android:layout_width="@dimen/twenty"
                        android:layout_height="@dimen/twenty"
                        android:layout_marginTop="@dimen/ten"
                        android:layout_marginLeft="@dimen/twenty"
                        android:src="@drawable/ic_location_on_black_24dp"/>
                    <TextView
                        android:id="@+id/tv_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ten"
                        android:layout_marginStart="@dimen/ten"
                        android:layout_toEndOf="@id/img_4"
                        android:text="@string/tv_marylebone_london"
                        android:fontFamily="sans-serif-medium"

                        android:textSize="@dimen/fiftee"
                        android:textColor="@color/gray"/>
                    <ImageView
                        android:layout_below="@id/img_4"
                        android:id="@+id/img_5"
                        android:layout_width="@dimen/twenty"
                        android:layout_height="@dimen/twenty"
                        android:layout_marginTop="@dimen/ten"
                        android:layout_marginLeft="@dimen/twenty"
                        android:src="@drawable/ic_zoom_out_map_black_24dp"/>
                    <TextView
                        android:id="@+id/tv_3"
                        android:layout_below="@id/tv_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ten"
                        android:layout_marginStart="@dimen/ten"
                        android:layout_toEndOf="@id/img_4"
                        android:text="@string/tv_2100sqft"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="@dimen/fiftee"
                        android:textColor="@color/gray"/>
                    <ImageView
                        android:layout_toEndOf="@id/tv_2"
                        android:id="@+id/img_6"
                        android:layout_width="@dimen/twenty"
                        android:layout_height="@dimen/twenty"
                        android:layout_marginTop="@dimen/forty"
                        android:layout_marginStart="@dimen/thirty"
                        android:layout_marginLeft="@dimen/twenty"
                        android:src="@drawable/ic_hotel_black_24dp"/>
                    <TextView
                        android:id="@+id/tv_4"
                        android:layout_toEndOf="@id/img_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/forty"
                        android:layout_marginStart="@dimen/ten"
                        android:text="@string/tv_3bedroom"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="@dimen/fiftee"
                        android:textColor="@color/gray"/>

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>